[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Objects/CurrentSource.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Objects/CurrentConductor.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Objects/ElectrodeTerminal.gd" type="Script" id=3]
[ext_resource path="res://Images/PositiveTerminal.png" type="Texture" id=4]
[ext_resource path="res://Images/NegativeTerminal.png" type="Texture" id=5]
[ext_resource path="res://Images/Resized_Images/Power_Box.png" type="Texture" id=6]
[ext_resource path="res://UI/RobotoMedium16.tres" type="DynamicFont" id=7]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 81, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 8.25 )

[node name="CurrentSource" type="RigidBody2D" groups=["CurrentConductors", "LabObjects"]]
collision_layer = 2
input_pickable = true
mode = 3
can_sleep = false
script = ExtResource( 1 )
time_delay = 0.005

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[node name="CurrentConductor" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.5 )
texture = ExtResource( 6 )

[node name="UserInput" type="Control" parent="."]
margin_left = -47.0
margin_top = -12.5
margin_right = 25.0
margin_bottom = 7.5
rect_scale = Vector2( 0.5, 0.5 )

[node name="VoltsInput" type="SpinBox" parent="UserInput"]
margin_right = 74.0
margin_bottom = 27.0
max_value = 1000.0
step = 10.0

[node name="TimeInput" type="SpinBox" parent="UserInput"]
margin_top = 36.0
margin_right = 74.0
margin_bottom = 63.0
max_value = 720.0

[node name="RunCurrent" type="Button" parent="UserInput"]
margin_left = 186.0
margin_top = 36.0
margin_right = 244.0
margin_bottom = 63.0
text = "START"

[node name="VoltsLabel" type="Label" parent="UserInput"]
margin_left = 80.0
margin_top = 1.0
margin_right = 118.0
margin_bottom = 20.0
rect_scale = Vector2( 1.75, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volts"
align = 1

[node name="Time" type="Label" parent="UserInput"]
margin_left = 80.0
margin_top = 33.0
margin_right = 117.0
margin_bottom = 52.0
rect_scale = Vector2( 1.75, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Time"
align = 1

[node name="PosTerminal" type="RigidBody2D" parent="."]
position = Vector2( -63, -8 )
gravity_scale = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="PosTerminal"]
margin_left = -9.0
margin_top = -7.0
margin_right = 9.0
margin_bottom = 11.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="PosTerminal"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 1
color = Color( 0.352941, 0.352941, 0.392157, 1 )

[node name="TerminalImg" type="Sprite" parent="PosTerminal"]
position = Vector2( 0, 2 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PosTerminal"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="PosTerminal"]
input_pickable = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PosTerminal/Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="NegTerminal" type="RigidBody2D" parent="."]
position = Vector2( -63, 14 )
gravity_scale = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="NegTerminal"]
margin_left = -9.0
margin_top = -9.0
margin_right = 9.0
margin_bottom = 9.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="NegTerminal"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 1
color = Color( 0.352941, 0.352941, 0.392157, 1 )

[node name="TerminalImg" type="Sprite" parent="NegTerminal"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="NegTerminal"]
position = Vector2( 0, 0.75 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="NegTerminal"]
input_pickable = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="NegTerminal/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[connection signal="body_shape_exited" from="." to="." method="_on_CurrentSource_body_shape_exited"]
[connection signal="value_changed" from="UserInput/VoltsInput" to="." method="_on_VoltsInput_value_changed"]
[connection signal="value_changed" from="UserInput/TimeInput" to="." method="_on_TimeInput_value_changed"]
[connection signal="pressed" from="UserInput/RunCurrent" to="." method="_on_RunCurrent_pressed"]
[connection signal="body_exited" from="PosTerminal/Area2D" to="PosTerminal" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="NegTerminal/Area2D" to="NegTerminal" method="_on_Area2D_body_exited"]
